Now using httpclient/request, other small pr changes