@@ -2,22 +2,23 @@ package dev.mccue.resolve.maven;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.nio.channels.Channels;
+import java.net.*;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.time.Duration;
 
 /**
  * Creates an object from a specified path at maven central. Allows for the downloading of POMS and Jars.
  */
-public class MavenCentralDownloader {
+public final class MavenCentralDownloader {
 
-    private final String mavenBaseURL = "https://repo.maven.apache.org/maven2/";
-    private final String pomExtension = ".pom";
-    private final String jarExtension = ".jar";
+    private static final String MAVEN_BASE_URL = "https://repo.maven.apache.org/maven2/";
+    private static final String POM_EXTENSION = ".pom";
+    private static final String JAR_EXTENSION = ".jar";
 
     private final String dependencyBaseURL;
     private final String group;
@@ -38,7 +39,7 @@ public class MavenCentralDownloader {
         this.name = name;
         this.version = version;
         this.path = relativePath;
-        this.dependencyBaseURL = mavenBaseURL +
+        this.dependencyBaseURL = MAVEN_BASE_URL +
                 URLEncoder.encode(group, StandardCharsets.UTF_8) + "/" +
                 URLEncoder.encode(name, StandardCharsets.UTF_8) + "/" +
                 URLEncoder.encode(version, StandardCharsets.UTF_8) + "/";
@@ -56,15 +57,25 @@ public class MavenCentralDownloader {
      *
      * @throws IOException
      */
-    public void getPOM() throws IOException {
+    public void getPOM() throws IOException, InterruptedException {
         Files.createDirectories(Paths.get(this.path));
-        var fileName = name + "-" + version + pomExtension;
-        var url = new URL(this.dependencyBaseURL + fileName);
-        var readableByteChannel = Channels.newChannel(url.openStream());
-        var fileOutputStream = new FileOutputStream(this.path + fileName + ".xml");
-        fileOutputStream.getChannel().transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
-        fileOutputStream.close();
-        readableByteChannel.close();
+        var fileName = name + "-" + version + POM_EXTENSION;
+        var client = HttpClient.newBuilder()
+                .version(HttpClient.Version.HTTP_1_1)
+                .followRedirects(HttpClient.Redirect.NORMAL)
+                .connectTimeout(Duration.ofSeconds(20))
+                .build();
+        var request = HttpRequest.newBuilder()
+                .uri(URI.create(this.dependencyBaseURL + fileName))
+                .build();
+        var response = client.send(request, HttpResponse.BodyHandlers.ofByteArray());
+        if (response.statusCode() == 200) {
+            try (var outputStream = new FileOutputStream(this.path + fileName + ".xml")) {
+                outputStream.write(response.body());
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
     }
 
     /**
@@ -72,19 +83,29 @@ public class MavenCentralDownloader {
      *
      * @throws IOException
      */
-    public void getJar() throws IOException {
+    public void getJar() throws IOException, InterruptedException {
         Files.createDirectories(Paths.get(this.path));
-        var fileName = name + "-" + version + jarExtension;
-        var url = new URL(this.dependencyBaseURL + fileName);
-        var readableByteChannel = Channels.newChannel(url.openStream());
-        var fileOutputStream = new FileOutputStream(this.path + fileName);
-        fileOutputStream.getChannel().transferFrom(readableByteChannel, 0, Long.MAX_VALUE);
-        fileOutputStream.close();
-        readableByteChannel.close();
+        var fileName = name + "-" + version + JAR_EXTENSION;
+        var client = HttpClient.newBuilder()
+                .version(HttpClient.Version.HTTP_1_1)
+                .followRedirects(HttpClient.Redirect.NORMAL)
+                .connectTimeout(Duration.ofSeconds(20))
+                .build();
+        var request = HttpRequest.newBuilder()
+                .uri(URI.create(this.dependencyBaseURL + fileName))
+                .build();
+        var response = client.send(request, HttpResponse.BodyHandlers.ofByteArray());
+        if (response.statusCode() == 200) {
+            try (var outputStream = new FileOutputStream(this.path + fileName)) {
+                outputStream.write(response.body());
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
     }
 
     public static void main(String[] args) throws Exception {
-        var u = new MavenCentralDownloader("HTTPClient", "HTTPClient", "0.3-3", "./downloads/");
+        var u = new MavenCentralDownloader("HTTPClient", "HTTPClient", "0.3-3", "./downloads/http/");
         u.getPOM();
         u.getJar();
     }
